# pysatSeasons

./: .coveragerc  .travis.yml  .zenodo.json  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  description.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  main.yml  pip_rc_install.yml  pysat_rc.yml
demo/: cosmic_and_ivm_demo.py  ssnl_occurrence_by_orbit.py
docs/: api.rst  citing.rst  conf.py  examples.rst  index.rst  installation.rst  overview.rst  requirements.txt
pysatSeasons/: __init__.py  _core.py  avg.py  occur_prob.py  plot.py
pysatSeasons/tests/: __init__.py  test_avg.py  test_core.py  test_occur_prob.py  test_plot.py
