[metadata]
name = pysatSeasons
version = file: pysatSeasons/version.txt
url = https://github.com/pysat/pysatSeasons
author = Russell A. Stoneback, et al.
author_email = pysat.developers@gmail.com
description = 'Seasonal analysis routines for pysat'
keywords =
  pysat
  ionosphere
  thermosphere
  magnetosphere
  average
  analysis
  season
  climatology
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Astronomy
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Operating System :: POSIX :: Linux
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Windows

license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  matplotlib
  numpy
  pandas
  pysat >=3.0
  xarray


[coverage:report]

[flake8]
max-line-length = 80
ignore =
  W503
  pysatSeasons/avg.py E501
  pysatSeasons/occur_prob.py E501
  pysatSeasons/plot.py E722

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    no_download: tests for instruments without download support
    first: first tests to run
    second: second tests to run
